Smb4K 1.0.4 (????-??-??):
- Fixed erroneously shown error notifications when searching. Thanks to
  Alexander Willand for reporting this issue.
- Make sure that "tdb_log" messages are not shown as error notifications
  to the user.

Smb4K 1.0.3 (2012-06-23):
- Make sure that output from the mount and unmount process is trimmed, so 
  that there are no false error messages.
- Fixed error notifications being shown although mounting and unmounting
  shares was successful.

Smb4K 1.0.2 (2012-05-30):
- Fixed two potential crashes in class Smb4KHomesSharesHandler.
- Fixed a wrong comparision between QString and QByteArray in 
  Smb4KMountJob::slotActionFinished().
- Fixed a wrong comparision between QString and QByteArray and a double
  declaration in Smb4KUnmountJob::slotActionFinished().
- Fixed wrong assumption that qreal equals double in Smb4KShare class. 
  Patch by Rex Dieter from the Fedora Project.
- Fixed missing assignments of the IP address in Smb4KAuthInfo::setHost()
  and Smb4KAuthInfo::setShare().
- When prompting for a password for a 'homes' share, use the UNC of the 
  user's home directory and not //SERVER/homes.
- When mounting a 'homes' share, show the UNC of the user's home directory
  in the mainwindow's status bar instead of //SERVER/homes.
- Fixed a crash in Smb4KMountJob::slotActionFinished() reported by 
  Peter Trenholme.
- Fixed unmounting on exit. Many thanks go to Peter Trenholme for reporting
  this issue.

Smb4K 1.0.1 (2012-03-11):
- Fixed potential crash in Smb4KWalletManager::init().
- Fixed KDEInit complaining when Smb4K is started from a desktop icon
  (closes SF ticket #23).
- Fixed periodic scanning.

Smb4K 1.0.0 (2012-02-01):
- KDE SC 4.4.0 and Qt 4.7.0 or later are required.
- We now use Utf8 throughout the whole application (closes #14674 and
  #17535).
- Unified the function names of the core classes that set and return the
  workgroup name, host name, and share name.